# RoutingBalance

./: .gitignore  CMakeLists.txt  README.md  TASK_INFO.md
clangd/: CMakeLists.txt
conf/: app.ini  ndrxconfig.xml  setbaldb
scripts/: README.md  admin_setup.sh  centos_setup.sh  change_prompt.sh  create_docker.sh  endurox_setup.sh  generate_database_data.py  postgresql_setup.sh
src/: CMakeLists.txt
src/bankcl/: CMakeLists.txt  bankcl.c
src/banksv/: CMakeLists.txt  banksv.c
src/common/: common_data.h
src/ecpg_database/: CMakeLists.txt  ecpg_database.cpp  ecpg_database.h  ecpg_sql.h  ecpg_sql.pgc
src/servers/: CMakeLists.txt  balance.c  router.c  services.cpp  services.h
src/servers/service/: CMakeLists.txt  balance_service.cpp  balance_service.hpp  iendurox_service.cpp  iendurox_service.hpp  router_service.cpp  router_service.hpp
test/: README.md  test.ud  test_1.ud  test_3.ud  test_4.ud
ubftab/: bank.fd
